docs/api/qiskit-ibm-runtime/0.38/runtime-job.mdx
---
title: RuntimeJob (v0.38)
description: API reference for qiskit_ibm_runtime.RuntimeJob in qiskit-ibm-runtime v0.38
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.RuntimeJob
---

# RuntimeJob

<Class id="qiskit_ibm_runtime.RuntimeJob" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/runtime_job.py#L47-L367" signature="RuntimeJob(backend, api_client, job_id, program_id, service, client_params=None, creation_date=None, user_callback=None, result_decoder=None, image='', session_id=None, tags=None, version=None)" modifiers="class">
  Bases: [`JobV1`](/docs/api/qiskit/qiskit.providers.JobV1 "(in Qiskit v2.0)"), `BaseRuntimeJob`

  Representation of a runtime primitive execution.

  A new `RuntimeJob` instance is returned when you call `QiskitRuntimeService.run` to execute a runtime primitive, or [`QiskitRuntimeService.job`](qiskit-runtime-service#job "qiskit_ibm_runtime.QiskitRuntimeService.job") to retrieve a previously executed job.

  If the primitive execution is successful, you can inspect the job’s status by calling [`status()`](#qiskit_ibm_runtime.RuntimeJob.status "qiskit_ibm_runtime.RuntimeJob.status"). Job status can be one of the [`JobStatus`](/docs/api/qiskit/qiskit.providers.JobStatus "(in Qiskit v2.0)") members.

  Some of the methods in this class are blocking, which means control may not be returned immediately. [`result()`](#qiskit_ibm_runtime.RuntimeJob.result "qiskit_ibm_runtime.RuntimeJob.result") is an example of a blocking method:

  ```python
  job = service.run(...)

  try:
      job_result = job.result()  # It will block until the job finishes.
      print("The job finished with result {}".format(job_result))
  except RuntimeJobFailureError as ex:
      print("Job failed!: {}".format(ex))
  ```

  (DEPRECATED) RuntimeJob constructor.

  **Parameters**

  *   **backend** ([*Backend*](/docs/api/qiskit/qiskit.providers.Backend "(in Qiskit v2.0)")) – The backend instance used to run this job.
  *   **api\_client** (*RuntimeClient*) – Object for connecting to the server.
  *   **client\_params** (*ClientParameters | None*) – (DEPRECATED) Parameters used for server connection.
  *   **job\_id** (*str*) – Job ID.
  *   **program\_id** (*str*) – ID of the program this job is for.
  *   **creation\_date** (*str | None*) – Job creation date, in UTC.
  *   **user\_callback** (*Callable | None*) – (DEPRECATED) User callback function.
  *   **result\_decoder** (*Type\[ResultDecoder] | Sequence\[Type\[ResultDecoder]] | None*) – A `ResultDecoder` subclass used to decode job results.
  *   **image** (*str | None*) – Runtime image used for this job: image\_name:tag.
  *   **service** ([*qiskit\_runtime\_service.QiskitRuntimeService*](qiskit-runtime-service "qiskit_ibm_runtime.qiskit_runtime_service.QiskitRuntimeService")) – Runtime service.
  *   **session\_id** (*str | None*) – Job ID of the first job in a runtime session.
  *   **tags** (*List | None*) – Tags assigned to the job.
  *   **version** (*int | None*) – Primitive version.

  ## Attributes

  ### ERROR

  <Attribute id="qiskit_ibm_runtime.RuntimeJob.ERROR" attributeTypeHint="str | RuntimeJobStatus" attributeValue="'job incurred error'" />

  ### JOB\_FINAL\_STATES

  <Attribute id="qiskit_ibm_runtime.RuntimeJob.JOB_FINAL_STATES" attributeTypeHint="Tuple[Any, ...]" attributeValue="(JobStatus.DONE, JobStatus.CANCELLED, JobStatus.ERROR)" />

  ### creation\_date

  <Attribute id="qiskit_ibm_runtime.RuntimeJob.creation_date">
    Job creation date in local time.

    **Returns**

    The job creation date as a datetime object, in local time, or `None` if creation date is not available.
  </Attribute>

  ### image

  <Attribute id="qiskit_ibm_runtime.RuntimeJob.image">
    Return the runtime image used for the job.

    **Returns**

    image\_name:tag or “” if the default image is used.

    **Return type**

    Runtime image
  </Attribute>

  ### inputs

  <Attribute id="qiskit_ibm_runtime.RuntimeJob.inputs">
    Job input parameters.

    **Returns**

    Input parameters used in this job.
  </Attribute>

  ### instance

  <Attribute id="qiskit_ibm_runtime.RuntimeJob.instance">
    For ibm\_quantum channel jobs, return the instance where the job was run. For ibm\_cloud, None is returned.
  </Attribute>

  ### primitive\_id

  <Attribute id="qiskit_ibm_runtime.RuntimeJob.primitive_id">
    Primitive name. :returns: Primitive this job is for.
  </Attribute>

  ### session\_id

  <Attribute id="qiskit_ibm_runtime.RuntimeJob.session_id">
    Session ID.

    **Returns**

    Session ID. None if the backend is a simulator.
  </Attribute>

  ### tags

  <Attribute id="qiskit_ibm_runtime.RuntimeJob.tags">
    Job tags.

    **Returns**

    Tags assigned to the job that can be used for filtering.
  </Attribute>

  ### usage\_estimation

  <Attribute id="qiskit_ibm_runtime.RuntimeJob.usage_estimation">
    Return the usage estimation infromation for this job.

    **Returns**

    `quantum_seconds` which is the estimated system execution time of the job in seconds. Quantum time represents the time that the system is dedicated to processing your job.
  </Attribute>

  ### version

  <Attribute id="qiskit_ibm_runtime.RuntimeJob.version" attributeValue="1" />

  ## Methods

  ### backend

  <Function id="qiskit_ibm_runtime.RuntimeJob.backend" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/runtime_job.py#L353-L367" signature="backend(timeout=None)">
    Return the backend where this job was executed. Retrieve data again if backend is None.

    **Raises**

    **IBMRuntimeError** – If a network error occurred.

    **Parameters**

    **timeout** (*float | None*)

    **Return type**

    [*Backend*](/docs/api/qiskit/qiskit.providers.Backend "(in Qiskit v2.0)") | None
  </Function>

  ### cancel

  <Function id="qiskit_ibm_runtime.RuntimeJob.cancel" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/runtime_job.py#L172-L185" signature="cancel()">
    Cancel the job.

    **Raises**

    *   **RuntimeInvalidStateError** – If the job is in a state that cannot be cancelled.
    *   **IBMRuntimeError** – If unable to cancel job.

    **Return type**

    None
  </Function>

  ### cancelled

  <Function id="qiskit_ibm_runtime.RuntimeJob.cancelled" signature="cancelled()">
    Return whether the job has been cancelled.

    **Return type**

    bool
  </Function>

  ### done

  <Function id="qiskit_ibm_runtime.RuntimeJob.done" signature="done()">
    Return whether the job has successfully run.

    **Return type**

    bool
  </Function>

  ### error\_message

  <Function id="qiskit_ibm_runtime.RuntimeJob.error_message" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/base_runtime_job.py#L192-L199" signature="error_message()">
    Returns the reason if the job failed.

    **Returns**

    Error message string or `None`.

    **Return type**

    str | None
  </Function>

  ### errored

  <Function id="qiskit_ibm_runtime.RuntimeJob.errored" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/runtime_job.py#L211-L213" signature="errored()">
    Return whether the job has failed.

    **Return type**

    bool
  </Function>

  ### in\_final\_state

  <Function id="qiskit_ibm_runtime.RuntimeJob.in_final_state" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/runtime_job.py#L207-L209" signature="in_final_state()">
    Return whether the job is in a final job state such as `DONE` or `ERROR`.

    **Return type**

    bool
  </Function>

  ### job\_id

  <Function id="qiskit_ibm_runtime.RuntimeJob.job_id" signature="job_id()">
    Return a unique id identifying the job.

    **Return type**

    str
  </Function>

  ### logs

  <Function id="qiskit_ibm_runtime.RuntimeJob.logs" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/runtime_job.py#L304-L323" signature="logs()">
    Return job logs.

    <Admonition title="Note" type="note">
      Job logs are only available after the job finishes.
    </Admonition>

    **Returns**

    Job logs, including standard output and error.

    **Raises**

    **IBMRuntimeError** – If a network error occurred.

    **Return type**

    str
  </Function>

  ### metrics

  <Function id="qiskit_ibm_runtime.RuntimeJob.metrics" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/base_runtime_job.py#L131-L147" signature="metrics()">
    Return job metrics.

    **Returns**

    *   `timestamps`: Timestamps of when the job was created, started running, and finished.

    *   **`usage`: Details regarding job usage, the measurement of the amount of**

        time the QPU is locked for your workload.

    **Return type**

    A dictionary with job metrics including but not limited to the following

    **Raises**

    **IBMRuntimeError** – If a network error occurred.
  </Function>

  ### properties

  <Function id="qiskit_ibm_runtime.RuntimeJob.properties" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/base_runtime_job.py#L178-L190" signature="properties(refresh=False)">
    Return the backend properties for this job.

    **Parameters**

    **refresh** (*bool*) – If `True`, re-query the server for the backend properties. Otherwise, return a cached version.

    **Returns**

    The backend properties used for this job, at the time the job was run, or `None` if properties are not available.

    **Return type**

    *BackendProperties* | None
  </Function>

  ### queue\_info

  <Function id="qiskit_ibm_runtime.RuntimeJob.queue_info" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/runtime_job.py#L270-L302" signature="queue_info()">
    Return queue information for this job.

    The queue information may include queue position, estimated start and end time, and dynamic priorities for the hub, group, and project. See `QueueInfo` for more information.

    <Admonition title="Note" type="note">
      The queue information is calculated after the job enters the queue. Therefore, some or all of the information may not be immediately available, and this method may return `None`.
    </Admonition>

    **Returns**

    A `QueueInfo` instance that contains queue information for this job, or `None` if queue information is unknown or not applicable.

    **Return type**

    *QueueInfo* | None
  </Function>

  ### queue\_position

  <Function id="qiskit_ibm_runtime.RuntimeJob.queue_position" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/runtime_job.py#L243-L268" signature="queue_position(refresh=False)">
    Return the position of the job in the server queue.

    <Admonition title="Note" type="note">
      The position returned is within the scope of the provider and may differ from the global queue position.
    </Admonition>

    **Parameters**

    **refresh** (*bool*) – If `True`, re-query the server to get the latest value. Otherwise return the cached value.

    **Returns**

    Position in the queue or `None` if position is unknown or not applicable.

    **Return type**

    int | None
  </Function>

  ### result

  <Function id="qiskit_ibm_runtime.RuntimeJob.result" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/runtime_job.py#L137-L170" signature="result(timeout=None, decoder=None)">
    Return the results of the job.

    **Parameters**

    *   **timeout** (*float | None*) – Number of seconds to wait for job.
    *   **decoder** (*Type\[ResultDecoder] | None*) – A `ResultDecoder` subclass used to decode job results.

    **Returns**

    Runtime job result.

    **Raises**

    *   **RuntimeJobFailureError** – If the job failed.
    *   **RuntimeJobMaxTimeoutError** – If the job does not complete within given timeout.
    *   **RuntimeInvalidStateError** – If the job was cancelled, and attempting to retrieve result.

    **Return type**

    *Any*
  </Function>

  ### running

  <Function id="qiskit_ibm_runtime.RuntimeJob.running" signature="running()">
    Return whether the job is actively running.

    **Return type**

    bool
  </Function>

  ### status

  <Function id="qiskit_ibm_runtime.RuntimeJob.status" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/runtime_job.py#L187-L205" signature="status()">
    Return the status of the job.

    **Returns**

    Status of this job.

    **Return type**

    [*JobStatus*](/docs/api/qiskit/qiskit.providers.JobStatus "(in Qiskit v2.0)")
  </Function>

  ### submit

  <Function id="qiskit_ibm_runtime.RuntimeJob.submit" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/runtime_job.py#L229-L241" signature="submit()">
    Unsupported method. .. note:

    ```python
    This method is not supported, please use
    :meth:`~qiskit_ibm_runtime.QiskitRuntimeService.run`
    to submit a job.
    ```

    **Raises**

    **NotImplementedError** – Upon invocation.

    **Return type**

    None
  </Function>

  ### update\_tags

  <Function id="qiskit_ibm_runtime.RuntimeJob.update_tags" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/base_runtime_job.py#L149-L176" signature="update_tags(new_tags)">
    Update the tags associated with this job.

    **Parameters**

    **new\_tags** (*List\[str]*) – New tags to assign to the job.

    **Returns**

    The new tags associated with this job.

    **Raises**

    **IBMApiError** – If an unexpected error occurred when communicating with the server or updating the job tags.

    **Return type**

    *List*\[str]
  </Function>

  ### usage

  <Function id="qiskit_ibm_runtime.RuntimeJob.usage" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/base_runtime_job.py#L123-L129" signature="usage()">
    Return job usage in seconds.

    **Return type**

    float
  </Function>

  ### wait\_for\_final\_state

  <Function id="qiskit_ibm_runtime.RuntimeJob.wait_for_final_state" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.38/qiskit_ibm_runtime/runtime_job.py#L325-L351" signature="wait_for_final_state(timeout=None)">
    Poll for the job status from the API until the status is in a final state.

    **Parameters**

    **timeout** (*float | None*) – Seconds to wait for the job. If `None`, wait indefinitely.

    **Raises**

    **RuntimeJobTimeoutError** – If the job does not complete within given timeout.

    **Return type**

    None
  </Function>
</Class>

